Darkice 0.19 to be released

    o added mount point option for Darwin Streaming Server
      thanks to Pierre Souchay <pierre@souchay.net>
    o fix for some reliablity issues when using a Jack source
      thanks to Pierre Souchay <pierre@souchay.net>
    o enable easier finding of jack libraries on MacOS X,
      thanks to Daniel Hazelbaker <daniel@highdesertchurch.com>

26-04-2007 DarkIce 0.18.1 released

    o enable real-time scheduling for non-super-users, if they have
      the proper operating system permissions,
      thanks to Jens Maurer <Jens.Maurer@gmx.net>
    o fix to enable compliation of the Serial ULAW code on MacOS X,
      thanks to Elod Horvath <elod@itfais.com>
    o fix to solve Shoutcast login failures, introduced in 0.18

05-03-2007 DarkIce 0.18 released

    o added serial ulaw input device support, thanks to
      Clyde Stubbs <clyde@htsoft.com>
    o improvements on reconnecting:
      added TCP connection keep-alive to TCP sockets
      added graceful sleep when trying to reconnect
    o added user-defined date formatting for the fileAddDate options,
      thanks to dsk <derrick@csociety.org>
    o added logging facility - [file-X] targets will cut the saved file
      and rename it as needed when darkice recieves the SIGUSR1 signal
    o added default configuration file handling - if no configuration file
      is specified, /etc/darkice.cfg is used
    o fix to enable compiling on 64 bit platforms
      thanks to Alexander Vlasov <zulu@galaradio.com> and
      Mariusz Mazur <mmazur@kernel.pl>
    o fix to enable file dump feature using ogg vorbis.
      thanks to dsk <derrick@csociety.org>
    o fix to enable compiling with jack installed at arbitrary locations

19-05-2006 DarkIce 0.17.1 released

    o bugfix: automatic reconnect works more reliably

26-01-2006 DarkIce 0.17 released

    o added check for bufferSecs set to 0
      thanks to Toph <fangiotophia@gmail.com>
    o added realtime parameter to the general section