@@ -107,6 +107,7 @@ Developed with contributions by
     Elod Horvath <elod@itfais.com>
     Pierre Souchay <pierre@souchay.net>
     Daniel Hazelbaker <daniel@highdesertchurch.com>
+    Alessandro Beretta <alessandro.baretta@radiomaria.org>
   
 .SH LINKS
 Project homepage:
